@@ -1,3 +1,12 @@
+2011-11-08  Alexander Pavlov  <apavlov@chromium.org>
+
+        Web Inspector: Avoid automatic Console suggestions with empty expression
+        https://bugs.webkit.org/show_bug.cgi?id=71783
+
+        Reviewed by Yury Semikhatsky.
+
+        * inspector/front-end/ConsoleView.js:
+
 2011-11-08  Nikolas Zimmermann  <nzimmermann@rim.com>
 
         Not reviewed. Fix build, by removing an unused variable.
